product_docs/docs/pgaa/1.11/overview/known_issues.mdx
---
title: Known issues
navTitle: Known issues
description: Learn about known issues in Analytics Accelerator version 1.11.
---

These are the currently known issues and limitations identified in this Analytics Accelerator release. Where applicable, we have included workarounds to help you mitigate the impact of these issues. These issues are actively tracked and are planned for resolution in a future release.

### Maintenance

- While the function `pgaa.launch_task()` supports multiple maintenance operations for Delta Lake (such as `z-order`, `vacuum`, and `purge`), it currently only supports the `compaction` operation for Iceberg tables. For other Iceberg maintenance routines, use `pgaa.spark_sql()`.
- The function [pgaa.execute_compaction()](../reference/functions#pgaaexecute_compaction) does not support the parameter `settings`. Use [pgaa.launch_task()](../reference/functions#pgaalaunch_task) for more granular control over compaction behavior.

### Spark

- Integration with Apache Spark is supported for:
    - Read-only queries on Parquet files in S3-compatible object storage or a shared POSIX filesystem.
    - Read-only queries for Iceberg tables in Iceberg REST catalogs.
- GPU acceleration with Apache Spark is only supported for read-only queries on Parquet files in S3-compatible object storage or a shared POSIX filesystem.
- There is a known issue in the Iceberg Spark Library version 1.9.2 when using Spark to read from Iceberg tables. Under certain conditions, equality deletes may occasionally be skipped during concurrent executions.
    The current workaround is to disable the Spark application setting [`spark.sql.iceberg.executor-cache.enabled`](https://iceberg.apache.org/docs/latest/spark-configuration/) on your `spark-defaults.conf` file.
    Disabling this cache ensures data consistency by correctly processing all deletes, but it may have performance implications for high-volume read workloads.

### DataFusion

- The DataFusion 55 upgrade in PGAA 1.11 introduced a new aggregate execution path that's enabled by default and can make some queries much slower than on PGAA 1.10. The regression is tracked upstream in [DataFusion issue 25157](https://github.com/apache/datafusion/issues/25157).
    To restore the previous performance, disable the migration aggregate setting.

    ```sql
    SET pgaa.datafusion.execution.enable_migration_aggregate = false;
    ```

### Object storage

- Integration with Amazon S3 Tables is currently not supported for PGD-integrated features (tiered tables, replication, and offloading). For PGD-managed lifecycles, use either a storage location or an Iceberg REST-compliant catalog.
- Renaming a table configured for analytics replication, or renaming the schema that contains it, isn't supported and interrupts synchronization with the object storage copy. Don't rename these tables or their schemas.

### WarehousePG

- PGAA on WarehousePG supports only the standard Postgres planner, not the Orca optimizer.
- Tables mapped to existing object storage data are read-only. Use CTAS to write new data into the data lake.
- `pgaa.launch_task()` requires the `pgcrypto` extension. If you see the error `function gen_random_uuid() does not exist`, run `CREATE EXTENSION pgcrypto;` on the coordinator before using maintenance functions.
- When restoring into an existing database that already contains PGAA tables, tables whose metadata already exists are skipped and only missing tables are restored. Use `--redirect-db` to restore a complete backup into a new, empty database.
